feat(slack): implement slack oauth2 service
